src/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Care_plan_step_date__c</fullName>
        <formula>Date_of_Session__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care plan step date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Care_plan_step_description__c</fullName>
        <formula>&quot;Course: &quot; &amp; Course__c &amp; &quot; Session: &quot; &amp;  Program_Session__r.Name</formula>
        <label>Care plan step description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <formula>Program_Session__r.Program_Service__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Session__c</fullName>
        <formula>Program_Session__r.Session_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrolment</label>
        <referenceTo>Enrolment__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>Interaction</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Session__c</fullName>
        <inlineHelpText>The program session the young person attends</inlineHelpText>
        <label>Program Session</label>
        <referenceTo>Program_Session__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Young_Person__c</fullName>
        <inlineHelpText>The person who attended the program session</inlineHelpText>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendances at sessions</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Young_Person_name__c</fullName>
        <formula>Young_Person__r.FirstName &amp; &quot; &quot; &amp;  Young_Person__r.LastName</formula>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Young_Person_name__c</columns>
        <columns>Attended__c</columns>
        <columns>Comment__c</columns>
        <columns>Care_plan_step_description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_ESOT_1_2012</fullName>
        <columns>Attended__c</columns>
        <columns>Date_of_Session__c</columns>
        <columns>Course__c</columns>
        <columns>Young_Person__c</columns>
        <columns>NAME</columns>
        <columns>Program_Session__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course__c</field>
            <operation>contains</operation>
            <value>ESOL 1</value>
        </filters>
        <label>All ESOT 1 2012</label>
    </listViews>
    <listViews>
        <fullName>All_ESOT_1_2012thismonth</fullName>
        <columns>Attended__c</columns>
        <columns>NAME</columns>
        <columns>Program_Session__c</columns>
        <columns>Course__c</columns>
        <columns>Young_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course__c</field>
            <operation>contains</operation>
            <value>ESOL 1</value>
        </filters>
        <filters>
            <field>Date_of_Session__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>All ESOT 1 2012 This Month</label>
    </listViews>
    <listViews>
        <fullName>All_ESOT_1_2012thisweek</fullName>
        <columns>Attended__c</columns>
        <columns>NAME</columns>
        <columns>Program_Session__c</columns>
        <columns>Course__c</columns>
        <columns>Young_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Course__c</field>
            <operation>contains</operation>
            <value>ESOL 1</value>
        </filters>
        <filters>
            <field>Date_of_Session__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All ESOT 1 2012 This Week</label>
    </listViews>
    <nameField>
        <displayFormat>Attendance-{00000}</displayFormat>
        <label>Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>